// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableArea[Base] should render correctly  1`] = `
<div
  class="c8pbwtj"
  style="width: 300px;"
>
  <div
    class="ctjdwm3 c-g7agv ck61dbg csqbo1g"
    tabindex="0"
  >
    <div
      class="c-1y2r77"
    >
      <span
        class="c-wb5oah"
      >
        input something
      </span>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  2`] = `
<div
  class="c8pbwtj"
  style="width: 300px;"
>
  <div
    class="ctjdwm3 c-g7agv ck61dbg csqbo1g"
    tabindex="0"
  >
    <div
      class="c-1y2r77"
    >
      i am a long text, i am a long text, i am a long text
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  3`] = `
<div
  id="popup-target"
  style="height: 100px; overflow-y: auto; position: relative; padding: 10px; margin-left: -10px;"
>
  <div
    style="height: 50px;"
  />
  <div
    class="c8pbwtj"
    style="width: 300px;"
  >
    <div
      class="ctjdwm3 c-g7agv ck61dbg csqbo1g"
      tabindex="0"
    >
      <div
        class="c-1y2r77"
      >
        <span
          class="c-wb5oah"
        >
          scroll in container
        </span>
      </div>
    </div>
  </div>
  <div
    style="height: 140px;"
  />
</div>
`;

exports[`EditableArea[Base] should render correctly  4`] = `
<div>
  <div
    class="c8pbwtj"
    style="width: 300px;"
  >
    <div
      class="ctjdwm3 c-g7agv ck61dbg csqbo1g"
      tabindex="0"
    >
      <div
        class="c-1y2r77"
      >
        <span
          class="c-wb5oah"
        >
          input something
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditableArea[Base] should render correctly  5`] = `
<div>
  <div
    class="c8pbwtj"
    style="width: 300px;"
  >
    <div
      class="ctjdwm3 c-g7agv ck61dbg csqbo1g"
      tabindex="0"
    >
      <div
        class="c-1y2r77"
      >
        <div>
          Guessing what I inputed ?
        </div>
      </div>
    </div>
  </div>
</div>
`;
